deleted:    badges/DISCORD.svg 	deleted:    badges/EXERCISM.svg 	deleted:    badges/FREECODECAMP.svg 	deleted:    badges/GITHUB.svg 	deleted:    badges/LINKEDIN.svg 	deleted:    badges/PROTONMAIL.svg 	deleted:    badges/STEAM.svg 	deleted:    badges/UBUNTU.svg 	deleted:    badges/WINDOWS.svg 	new file:   docs/cv_light.pdf 	renamed:    images/icon.jpg -> docs/icon.jpg 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header>
-      <img class="round" src="images/icon.jpg" />
+      <img class="round" src="docs/icon.jpg" />
       <div>
         <p class="sub-text" id="blue-text">// omelette bio //</p>
         <h1>Francois Flandin</h1>
@@ -24,6 +24,11 @@
         </p>
         <div>
           <br />
+          <a href="docs/cv_light.pdf" download>
+            <img
+              src="https://img.shields.io/badge/mon%20cv-EA4C89?style=for-the-badge"
+            />
+          </a>
           <a href="https://github.com/omelette-bio" target="_blank">
             <img
               src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white"
