modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -120,6 +120,12 @@
             />
           </article>
         </article>
+        <article>
+          <h3>> Text formating</h3>
+          <article>
+            <img src="https://img.shields.io/badge/markdown-%23000000.svg?style=for-the-badge&logo=markdown&logoColor=white"> 
+          </article>
+        </article>
       </div>
       <div class="sub-section">
         <h2 id="blue-text">// Projets //</h2>
