modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
           />
         </a>
       </div>
+      <p class="bottom-text" id="gray-text">Développé par Francois Flandin</p>
     </footer>
   </body>
 </html>
