modified:   index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
+    <meta property="og:title" content="Flandin François">
+    <meta property="og:description" content="Etudiant en L3 info">
+    <meta property="og:image" content="http://francois-flandin.fr/docs/icon.jpg">
+    <meta property="og:url" content="http://francois-flandin.fr">
+
+
     <title>Francois Flandin</title>
 
     <link rel="stylesheet" href="index.css" />
