modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <header>
       <img class="round" src="docs/icon.jpg" />
-      <div>
+      <div class="mt2">
         <p class="sub-text" id="blue-text">// omelette bio //</p>
         <h1>Francois Flandin</h1>
         <p class="sub-text" id="gray-text">
