modified:   index.html

--- a/index.html
+++ b/index.html
@@ -207,6 +207,13 @@
             src="https://img.shields.io/badge/Xbox-107C10?style=for-the-badge&logo=xbox&logoColor=white"
           />
         </a>
+        <a
+          href="https://open.spotify.com/user/zezwiafwzq7l4pl1onljkzcqz?si=db177d2914164c6e"
+        >
+          <img
+            src="https://img.shields.io/badge/Spotify-1ED760?style=for-the-badge&logo=spotify&logoColor=white"
+          />
+        </a>
       </div>
       <p class="bottom-text" id="gray-text">Développé par Francois Flandin</p>
     </footer>
