--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!--https://img.shields.io/badge/website-000000?style=for-the-badge&logo=About.me&logoColor=white-->
+
 <!DOCTYPE html>
 <html lang="fr">
   <head>
@@ -48,9 +50,14 @@
               src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white"
             />
           </a>
-          <a href="https://www.freecodecamp.org/omelette-bio" target="_blank">
+          <!-- <a href="https://www.freecodecamp.org/omelette-bio" target="_blank">
             <img
               src="https://img.shields.io/badge/freecodecamp-27273D?style=for-the-badge&logo=freecodecamp&logoColor=white"
+            />
+          </a> -->
+          <a href="https://leetcode.com/omelette-bio/" target="_blank">
+            <img
+              src="https://img.shields.io/badge/-LeetCode-FFA116?style=for-the-badge&logo=LeetCode&logoColor=black"
             />
           </a>
           <a href="https://exercism.org/profiles/omelette-bio" target="_blank">
