--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 
     <title>Francois Flandin</title>
+    <link rel="icon" href="docs/logo.png">
 
     <link rel="stylesheet" href="index.css" />
 
