modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -17,16 +17,15 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Epilogue:wght@700&family=Inter:wght@300;500&family=JetBrains+Mono&display=swap"
-      rel="stylesheet"
-    />
+    <link 
+      href="https://fonts.googleapis.com/css2?family=Epilogue:wght@700&family=Inter:wght@300;500&family=JetBrains+Mono&family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet"
+    >
   </head>
   <body>
     <header>
       <img class="round" src="docs/icon.jpg" />
       <div class="mt2">
-        <p class="sub-text" id="blue-text">// omelette bio //</p>
+        <p class="sub-text" id="blue-text">// omelette-bio //</p>
         <h1>Francois Flandin</h1>
         <p class="sub-text" id="gray-text">
           Étudiant en L3 info d’Université Côte d’Azur
