modified:   index.html

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <h3>> RPG textuel [09.2023]</h3>
           </a>
           <p>
-            Premier projet de l'ue programmation orientée objet, consistant à
+            Premier projet de l'ue programmation et conception orientée objet, consistant à
             faire un petit rpg simple en java, afin de se familiariser avec la
             programmation orientée objet.
           </p>
@@ -183,7 +183,7 @@
         <article>
           <h3>> Convertisseur Midi -> wav [10.2023]</h3>
           <p>
-            Deuxième projet de l'ue programmation orientée objet, consistant à
+            Deuxième projet de l'ue programmation et conception orientée objet, consistant à
             faire un convertisseur de fichier midi en fichier wav, afin
             d'apprendre à utiliser des libraries externes.
           </p>
