modified:   index.html

--- a/index.html
+++ b/index.html
@@ -188,6 +188,15 @@
             d'apprendre à utiliser des libraries externes.
           </p>
         </article>
+        <article>
+          <a href="https://ieba2.github.io/HydroSharks-website/">
+            <h3>> Site web HydroSharks [9.2023 - 12.2023]</h3>
+          </a>
+          <p>
+            Conception d'un site web pour l'association étudiante HydroSharks de SeaTech.
+          </p>
+          </h3>
+        </article>
       </div>
     </section>
     <footer>
