new file:   docs/hd.svg 	modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -23,50 +23,52 @@
   </head>
   <body>
     <header>
-      <img class="round" src="docs/icon.jpg" />
-      <div class="mt2">
-        <p class="sub-text" id="blue-text">// omelette-bio //</p>
-        <h1>Francois Flandin</h1>
-        <p class="sub-text" id="gray-text">
-          Étudiant en L3 info d’Université Côte d’Azur
-        </p>
-        <div>
-          <br />
-          <a href="docs/cv_light.pdf" download>
-            <img
+      <div class="header">
+        <img class="round" src="docs/icon.jpg" />
+        <div class="mt2">
+          <p class="sub-text" id="blue-text">// omelette-bio //</p>
+          <h1>Francois Flandin</h1>
+          <p class="sub-text" id="gray-text">
+            Étudiant en L3 info d’Université Côte d’Azur
+          </p>
+          <div>
+            <br />
+            <a href="docs/cv_light.pdf" download>
+              <img
               src="https://img.shields.io/badge/mon%20cv-EA4C89?style=for-the-badge"
-            />
-          </a>
-          <a href="https://github.com/omelette-bio" target="_blank">
-            <img
+              />
+            </a>
+            <a href="https://github.com/omelette-bio" target="_blank">
+              <img
               src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white"
-            />
-          </a>
-          <a
+              />
+            </a>
+            <a
             href="https://www.linkedin.com/in/fran%C3%A7ois-flandin-b2a8b2295/"
             target="_blank"
-          >
-            <img
+            >
+              <img
               src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white"
-            />
-          </a>
-          <!-- <a href="https://www.freecodecamp.org/omelette-bio" target="_blank">
-            <img
-              src="https://img.shields.io/badge/freecodecamp-27273D?style=for-the-badge&logo=freecodecamp&logoColor=white"
-            />
-          </a> -->
-          <a href="https://leetcode.com/omelette-bio/" target="_blank">
-            <img
-              src="https://img.shields.io/badge/-LeetCode-FFA116?style=for-the-badge&logo=LeetCode&logoColor=black"
-            />
-          </a>
-          <a href="https://exercism.org/profiles/omelette-bio" target="_blank">
-            <img
-              src="https://img.shields.io/badge/Exercism-009CAB?style=for-the-badge&logo=exercism&logoColor=white"
-            />
-          </a>
+              />
+            </a>
+              <!-- <a href="https://www.freecodecamp.org/omelette-bio" target="_blank">
+                <img
+                src="https://img.shields.io/badge/freecodecamp-27273D?style=for-the-badge&logo=freecodecamp&logoColor=white"
+                />
+              </a> -->
+              <a href="https://leetcode.com/omelette-bio/" target="_blank">
+                <img
+                src="https://img.shields.io/badge/-LeetCode-FFA116?style=for-the-badge&logo=LeetCode&logoColor=black"
+                />
+              </a>
+              <a href="https://exercism.org/profiles/omelette-bio" target="_blank">
+                <img
+                src="https://img.shields.io/badge/Exercism-009CAB?style=for-the-badge&logo=exercism&logoColor=white"
+                />
+              </a>
+          </div>
+          </div>
         </div>
-      </div>
     </header>
     <section>
       <div class="sub-section">
@@ -78,7 +80,7 @@
           particulièrement dans le développement bas niveau ainsi que
           l'architecture des ordinateurs, et je suis également passionné par les
           jeux vidéos, les mangas et écouter de la musique.
-        </p>
+      </p>
       </div>
       <div class="sub-section">
         <h2 id="blue-text">// Compétences //</h2>
