modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
         <article>
           <a href="https://github.com/omelette-bio/bataille-navale">
             <h3>> Bataille Navale [12.2022]</h3>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#fffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M14 12C14 14.7614 11.7614 17 9 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H7.5M10 12C10 9.23858 12.2386 7 15 7H17C19.7614 7 22 9.23858 22 12C22 14.7614 19.7614 17 17 17H16.5" stroke="#ffffff" stroke-width="2" stroke-linecap="round"></path> </g></svg>
           </a>
           <p>
             Projet de fin de semestre de l'ue structures de données et
@@ -156,6 +157,7 @@
         <article>
           <a href="https://github.com/omelette-bio/mrsync">
             <h3>> mrsync [05.2023]</h3>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#fffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M14 12C14 14.7614 11.7614 17 9 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H7.5M10 12C10 9.23858 12.2386 7 15 7H17C19.7614 7 22 9.23858 22 12C22 14.7614 19.7614 17 17 17H16.5" stroke="#ffffff" stroke-width="2" stroke-linecap="round"></path> </g></svg>
           </a>
           <p>
             Projet de fin de semestre de l'ue programmation système, consistant
@@ -165,6 +167,7 @@
         <article>
           <a href="https://github.com/omelette-bio/projet-concept-ia">
             <h3>> Concepts IA [05.2023]</h3>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#fffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M14 12C14 14.7614 11.7614 17 9 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H7.5M10 12C10 9.23858 12.2386 7 15 7H17C19.7614 7 22 9.23858 22 12C22 14.7614 19.7614 17 17 17H16.5" stroke="#ffffff" stroke-width="2" stroke-linecap="round"></path> </g></svg>
           </a>
           <p>
             Projet de fin de semestre de l'ue concepts de l'intelligence
@@ -175,6 +178,7 @@
         <article>
           <a href="https://github.com/omelette-bio/les-nuits-de-padhiver">
             <h3>> RPG textuel [09.2023]</h3>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#fffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M14 12C14 14.7614 11.7614 17 9 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H7.5M10 12C10 9.23858 12.2386 7 15 7H17C19.7614 7 22 9.23858 22 12C22 14.7614 19.7614 17 17 17H16.5" stroke="#ffffff" stroke-width="2" stroke-linecap="round"></path> </g></svg>
           </a>
           <p>
             Premier projet de l'ue programmation et conception orientée objet, consistant à
@@ -193,6 +197,7 @@
         <article>
           <a href="https://ieba2.github.io/HydroSharks-website/">
             <h3>> Site web HydroSharks [9.2023 - 12.2023]</h3>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#fffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M14 12C14 14.7614 11.7614 17 9 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H7.5M10 12C10 9.23858 12.2386 7 15 7H17C19.7614 7 22 9.23858 22 12C22 14.7614 19.7614 17 17 17H16.5" stroke="#ffffff" stroke-width="2" stroke-linecap="round"></path> </g></svg>
           </a>
           <p>
             Conception d'un site web pour l'association étudiante HydroSharks de SeaTech.
