modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
           jeux vidéos, les mangas et écouter de la musique.
       </p>
       </div>
+      <!-- compétences -->
       <div class="sub-section">
         <h2 id="blue-text">// Compétences //</h2>
         <article>
@@ -119,19 +120,27 @@
           </article>
         </article>
         <article>
-          <h3>> Outils</h3>
+          <h3>> Os</h3>
           <article>
             <img
-              src="https://img.shields.io/badge/Windows-0078D6?style=for-the-badge&logo=windows&logoColor=white"
+              src="https://img.shields.io/badge/Debian-A81D33?style=for-the-badge&logo=debian&logoColor=white"
             />
             <img
               src="https://img.shields.io/badge/Ubuntu-E95420?style=for-the-badge&logo=ubuntu&logoColor=white"
             />
             <img
-              src="https://img.shields.io/badge/NeoVim-%2357A143.svg?&style=for-the-badge&logo=neovim&logoColor=white"
+              src="https://img.shields.io/badge/Windows-0078D6?style=for-the-badge&logo=windows&logoColor=white"
             />
+          </article>
+        </article>
+        <article>
+          <h3>> IDE</h3>
+          <article>
             <img
               src="https://img.shields.io/badge/Visual_Studio_Code-0078D4?style=for-the-badge&logo=visual%20studio%20code&logoColor=white"
+            />
+            <img
+              src="https://img.shields.io/badge/NeoVim-%2357A143.svg?&style=for-the-badge&logo=neovim&logoColor=white"
             />
           </article>
         </article>
@@ -142,12 +151,27 @@
           </article>
         </article>
       </div>
+      <!-- formations -->
       <div class="sub-section">
-        <h2 id="blue-text">// Projets //</h2>
+        <h2 id="blue-text">// Formations //</h2>
+        <article>
+          <h3>> Université Nice Côte d'Azur [2021 - 2024]</h3>
+          <p>
+            Licence informatique<br>Membre du club informatique durant l'année 2023 - 2024
+          </p>
+        </article>
+      </div>
+
+      <!-- projets univ -->
+      <div class="sub-section">
+        <h2 id="blue-text">// Projets Universitaires //</h2>
         <article>
           <a href="https://github.com/omelette-bio/bataille-navale">
             <h3>> Bataille Navale [12.2022]</h3>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#fffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M14 12C14 14.7614 11.7614 17 9 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H7.5M10 12C10 9.23858 12.2386 7 15 7H17C19.7614 7 22 9.23858 22 12C22 14.7614 19.7614 17 17 17H16.5" stroke="#ffffff" stroke-width="2" stroke-linecap="round"></path> </g></svg>
+            <img
+              src="https://img.shields.io/badge/C-00599C?style=for-the-badge&logo=c&logoColor=white"
+            />
           </a>
           <p>
             Projet de fin de semestre de l'ue structures de données et
@@ -158,6 +182,9 @@
           <a href="https://github.com/omelette-bio/mrsync">
             <h3>> mrsync [05.2023]</h3>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#fffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M14 12C14 14.7614 11.7614 17 9 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H7.5M10 12C10 9.23858 12.2386 7 15 7H17C19.7614 7 22 9.23858 22 12C22 14.7614 19.7614 17 17 17H16.5" stroke="#ffffff" stroke-width="2" stroke-linecap="round"></path> </g></svg>
+            <img
+              src="https://img.shields.io/badge/Python-14354C?style=for-the-badge&logo=python&logoColor=white"
+            />
           </a>
           <p>
             Projet de fin de semestre de l'ue programmation système, consistant
@@ -168,6 +195,9 @@
           <a href="https://github.com/omelette-bio/projet-concept-ia">
             <h3>> Concepts IA [05.2023]</h3>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#fffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M14 12C14 14.7614 11.7614 17 9 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H7.5M10 12C10 9.23858 12.2386 7 15 7H17C19.7614 7 22 9.23858 22 12C22 14.7614 19.7614 17 17 17H16.5" stroke="#ffffff" stroke-width="2" stroke-linecap="round"></path> </g></svg>
+            <img
+              src="https://img.shields.io/badge/Python-14354C?style=for-the-badge&logo=python&logoColor=white"
+            />
           </a>
           <p>
             Projet de fin de semestre de l'ue concepts de l'intelligence
@@ -179,6 +209,9 @@
           <a href="https://github.com/omelette-bio/les-nuits-de-padhiver">
             <h3>> RPG textuel [09.2023]</h3>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#fffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M14 12C14 14.7614 11.7614 17 9 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H7.5M10 12C10 9.23858 12.2386 7 15 7H17C19.7614 7 22 9.23858 22 12C22 14.7614 19.7614 17 17 17H16.5" stroke="#ffffff" stroke-width="2" stroke-linecap="round"></path> </g></svg>
+            <img
+              src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white"
+            />
           </a>
           <p>
             Premier projet de l'ue programmation et conception orientée objet, consistant à
@@ -187,24 +220,101 @@
           </p>
         </article>
         <article>
-          <h3>> Convertisseur Midi -> wav [10.2023]</h3>
+          <a href="#">
+            <h3>> Convertisseur Midi -> wav [10.2023]</h3>
+            <img
+              src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white"
+            />
+          </a>
           <p>
             Deuxième projet de l'ue programmation et conception orientée objet, consistant à
             faire un convertisseur de fichier midi en fichier wav, afin
             d'apprendre à utiliser des libraries externes.
           </p>
         </article>
+      </div>
+      <!-- projets perso -->
+      <div class="sub-section">
+        <h2 id="blue-text">// Projets personnels //</h2>
+        <article>
+          <a href="https://github.com/omelette-bio/potit_blagueur_pouete_pouete">
+            <h3>> Potit blagueur pouete pouete [04.2023]</h3>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#fffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M14 12C14 14.7614 11.7614 17 9 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H7.5M10 12C10 9.23858 12.2386 7 15 7H17C19.7614 7 22 9.23858 22 12C22 14.7614 19.7614 17 17 17H16.5" stroke="#ffffff" stroke-width="2" stroke-linecap="round"></path> </g></svg>
+            <img
+              src="https://img.shields.io/badge/Python-14354C?style=for-the-badge&logo=python&logoColor=white"
+            />
+          </a>
+          <p>
+            Bot discord en python permettant de faire des blagues avec l'api blagues ainsi que de répondre feur.
+          </p>
+        </article>
+        <article>
+          <a href="https://github.com/omelette-bio/gamepass2lghub">
+            <h3>> gamepass to lghub [08.2023]</h3>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#fffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M14 12C14 14.7614 11.7614 17 9 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H7.5M10 12C10 9.23858 12.2386 7 15 7H17C19.7614 7 22 9.23858 22 12C22 14.7614 19.7614 17 17 17H16.5" stroke="#ffffff" stroke-width="2" stroke-linecap="round"></path> </g></svg>
+            <img
+              src="https://img.shields.io/badge/Python-14354C?style=for-the-badge&logo=python&logoColor=white"
+            />
+          </a>
+          <p>
+            Programme python permettant d'ajouter des jeux Xbox Gamepass à Logitech G Hub, afin de sauvegarder ses paramètres de jeux.
+          </p>
+          </h3>
+        </article>
+        <article>
+          <a href="https://github.com/omelette-bio/cow_discord_bot">
+            <h3>> Cow interpreter discord bot [09.2023]</h3>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#fffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M14 12C14 14.7614 11.7614 17 9 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H7.5M10 12C10 9.23858 12.2386 7 15 7H17C19.7614 7 22 9.23858 22 12C22 14.7614 19.7614 17 17 17H16.5" stroke="#ffffff" stroke-width="2" stroke-linecap="round"></path> </g></svg>
+            <img
+              src="https://img.shields.io/badge/Python-14354C?style=for-the-badge&logo=python&logoColor=white"
+            />
+          </a>
+          <p>
+            Bot discord en python permettant d'intérpreter du code cow, soit en l'écrivant dans un message, soit en envoyant un fichier.
+          </p>
+        </article>
         <article>
           <a href="https://ieba2.github.io/HydroSharks-website/">
             <h3>> Site web HydroSharks [9.2023 - 12.2023]</h3>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#fffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M14 12C14 14.7614 11.7614 17 9 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H7.5M10 12C10 9.23858 12.2386 7 15 7H17C19.7614 7 22 9.23858 22 12C22 14.7614 19.7614 17 17 17H16.5" stroke="#ffffff" stroke-width="2" stroke-linecap="round"></path> </g></svg>
+            <img
+              src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"
+            />
+            <img
+              src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white"
+            />
+            <img
+              src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black"
+            />
           </a>
           <p>
             Conception d'un site web pour l'association étudiante HydroSharks de SeaTech.
           </p>
           </h3>
         </article>
+        <article>
+          <a href="https://github.com/omelette-bio/txt-editor">
+            <h3>> Éditeur de texte [11.2023]</h3>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#fffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M14 12C14 14.7614 11.7614 17 9 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H7.5M10 12C10 9.23858 12.2386 7 15 7H17C19.7614 7 22 9.23858 22 12C22 14.7614 19.7614 17 17 17H16.5" stroke="#ffffff" stroke-width="2" stroke-linecap="round"></path> </g></svg>
+            <img
+              src="https://img.shields.io/badge/Rust-000000?style=for-the-badge&logo=rust&logoColor=white"
+            />
+            <img
+              src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"
+            />
+            <img
+              src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white"
+            />
+            <img
+              src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black"
+            />
+          </a>
+          <p>
+            Essai de conception d'un éditeur de texte simple en utilisant la crate Tauri de Rust.
+          </p>
+        </article>
       </div>
+
     </section>
     <footer>
       <div>
