--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         </article>
         <article>
           <a href="https://ieba2.github.io/HydroSharks-website/">
-            <h3>> Site web HydroSharks [9.2023 - 12.2023]</h3>
+            <h3>> Site web HydroSharks Seatech [9.2023 - 12.2023]</h3>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#fffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M14 12C14 14.7614 11.7614 17 9 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H7.5M10 12C10 9.23858 12.2386 7 15 7H17C19.7614 7 22 9.23858 22 12C22 14.7614 19.7614 17 17 17H16.5" stroke="#ffffff" stroke-width="2" stroke-linecap="round"></path> </g></svg>
             <img
               src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"
@@ -288,7 +288,7 @@
             />
           </a>
           <p>
-            Conception d'un site web pour l'association étudiante HydroSharks de SeaTech.
+            Conception d'un site web pour l'association étudiante HydroSharks SeaTech à l'Université de Toulon.
           </p>
           </h3>
         </article>
