modified:   index.html

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
             />
           </a>
           <p>
-            Conception d'un site web pour l'association étudiante HydroSharks SeaTech à l'Université de Toulon.
+            Conception d'un site web pour l'association étudiante HydroSharks SeaTech.
           </p>
           </h3>
         </article>
