--- a/index.html
+++ b/index.html
@@ -155,7 +155,9 @@
       <div class="sub-section">
         <h2 id="blue-text">// Formations //</h2>
         <article>
-          <h3>> Université Nice Côte d'Azur [2021 - 2024]</h3>
+          <a href="https://upinfo.univ-cotedazur.fr">
+            <h3>> Université Nice Côte d'Azur [2021 - 2024]</h3>
+          </a>
           <p>
             Licence informatique<br>Membre du club informatique durant l'année 2023 - 2024
           </p>
