new file:   docs/link.svg 	modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="sub-section">
         <h2 id="blue-text">// Compétences //</h2>
         <article>
-          <h3>> Frontend</h3>
+          <h3>Frontend</h3>
           <article>
             <img
               src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"
@@ -100,7 +100,7 @@
           </article>
         </article>
         <article>
-          <h3>> Programmation</h3>
+          <h3>Programmation</h3>
           <article>
             <img
               src="https://img.shields.io/badge/Python-14354C?style=for-the-badge&logo=python&logoColor=white"
@@ -120,7 +120,7 @@
           </article>
         </article>
         <article>
-          <h3>> Os</h3>
+          <h3>Os</h3>
           <article>
             <img
               src="https://img.shields.io/badge/Debian-A81D33?style=for-the-badge&logo=debian&logoColor=white"
@@ -134,7 +134,7 @@
           </article>
         </article>
         <article>
-          <h3>> IDE</h3>
+          <h3>IDE</h3>
           <article>
             <img
               src="https://img.shields.io/badge/Visual_Studio_Code-0078D4?style=for-the-badge&logo=visual%20studio%20code&logoColor=white"
@@ -145,7 +145,7 @@
           </article>
         </article>
         <article>
-          <h3>> Text formating</h3>
+          <h3>Text formating</h3>
           <article>
             <img src="https://img.shields.io/badge/markdown-%23000000.svg?style=for-the-badge&logo=markdown&logoColor=white"> 
           </article>
@@ -156,7 +156,7 @@
         <h2 id="blue-text">// Formations //</h2>
         <article>
           <a href="https://upinfo.univ-cotedazur.fr">
-            <h3>> Université Nice Côte d'Azur [2021 - 2024]</h3>
+            <h3 class="link">Université Nice Côte d'Azur [2021 - 2024]</h3>
           </a>
           <p>
             Licence informatique<br>Membre du club informatique durant l'année 2023 - 2024
@@ -169,8 +169,7 @@
         <h2 id="blue-text">// Projets Universitaires //</h2>
         <article>
           <a href="https://github.com/omelette-bio/bataille-navale">
-            <h3>> Bataille Navale [12.2022]</h3>
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#fffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M14 12C14 14.7614 11.7614 17 9 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H7.5M10 12C10 9.23858 12.2386 7 15 7H17C19.7614 7 22 9.23858 22 12C22 14.7614 19.7614 17 17 17H16.5" stroke="#ffffff" stroke-width="2" stroke-linecap="round"></path> </g></svg>
+            <h3 class="link">Bataille Navale [12.2022]</h3>
             <img
               src="https://img.shields.io/badge/C-00599C?style=for-the-badge&logo=c&logoColor=white"
             />
@@ -182,8 +181,7 @@
         </article>
         <article>
           <a href="https://github.com/omelette-bio/mrsync">
-            <h3>> mrsync [05.2023]</h3>
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#fffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M14 12C14 14.7614 11.7614 17 9 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H7.5M10 12C10 9.23858 12.2386 7 15 7H17C19.7614 7 22 9.23858 22 12C22 14.7614 19.7614 17 17 17H16.5" stroke="#ffffff" stroke-width="2" stroke-linecap="round"></path> </g></svg>
+            <h3 class="link">mrsync [05.2023]</h3>
             <img
               src="https://img.shields.io/badge/Python-14354C?style=for-the-badge&logo=python&logoColor=white"
             />
@@ -195,8 +193,7 @@
         </article>
         <article>
           <a href="https://github.com/omelette-bio/projet-concept-ia">
-            <h3>> Concepts IA [05.2023]</h3>
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#fffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M14 12C14 14.7614 11.7614 17 9 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H7.5M10 12C10 9.23858 12.2386 7 15 7H17C19.7614 7 22 9.23858 22 12C22 14.7614 19.7614 17 17 17H16.5" stroke="#ffffff" stroke-width="2" stroke-linecap="round"></path> </g></svg>
+            <h3 class="link">Concepts IA [05.2023]</h3>
             <img
               src="https://img.shields.io/badge/Python-14354C?style=for-the-badge&logo=python&logoColor=white"
             />
@@ -209,8 +206,7 @@
         </article>
         <article>
           <a href="https://github.com/omelette-bio/les-nuits-de-padhiver">
-            <h3>> RPG textuel [09.2023]</h3>
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#fffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M14 12C14 14.7614 11.7614 17 9 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H7.5M10 12C10 9.23858 12.2386 7 15 7H17C19.7614 7 22 9.23858 22 12C22 14.7614 19.7614 17 17 17H16.5" stroke="#ffffff" stroke-width="2" stroke-linecap="round"></path> </g></svg>
+            <h3 class="link">RPG textuel [09.2023]</h3>
             <img
               src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white"
             />
@@ -223,7 +219,7 @@
         </article>
         <article>
           <a href="#">
-            <h3>> Convertisseur Midi -> wav [10.2023]</h3>
+            <h3 class="link">Convertisseur Midi -> wav [10.2023]</h3>
             <img
               src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white"
             />
@@ -240,8 +236,7 @@
         <h2 id="blue-text">// Projets personnels //</h2>
         <article>
           <a href="https://github.com/omelette-bio/potit_blagueur_pouete_pouete">
-            <h3>> Potit blagueur pouete pouete [04.2023]</h3>
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#fffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M14 12C14 14.7614 11.7614 17 9 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H7.5M10 12C10 9.23858 12.2386 7 15 7H17C19.7614 7 22 9.23858 22 12C22 14.7614 19.7614 17 17 17H16.5" stroke="#ffffff" stroke-width="2" stroke-linecap="round"></path> </g></svg>
+            <h3 class="link">Potit blagueur pouete pouete [04.2023]</h3>
             <img
               src="https://img.shields.io/badge/Python-14354C?style=for-the-badge&logo=python&logoColor=white"
             />
@@ -252,8 +247,7 @@
         </article>
         <article>
           <a href="https://github.com/omelette-bio/gamepass2lghub">
-            <h3>> gamepass to lghub [08.2023]</h3>
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#fffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M14 12C14 14.7614 11.7614 17 9 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H7.5M10 12C10 9.23858 12.2386 7 15 7H17C19.7614 7 22 9.23858 22 12C22 14.7614 19.7614 17 17 17H16.5" stroke="#ffffff" stroke-width="2" stroke-linecap="round"></path> </g></svg>
+            <h3 class="link">gamepass to lghub [08.2023]</h3>
             <img
               src="https://img.shields.io/badge/Python-14354C?style=for-the-badge&logo=python&logoColor=white"
             />
@@ -265,8 +259,7 @@
         </article>
         <article>
           <a href="https://github.com/omelette-bio/cow_discord_bot">
-            <h3>> Cow interpreter discord bot [09.2023]</h3>
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#fffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M14 12C14 14.7614 11.7614 17 9 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H7.5M10 12C10 9.23858 12.2386 7 15 7H17C19.7614 7 22 9.23858 22 12C22 14.7614 19.7614 17 17 17H16.5" stroke="#ffffff" stroke-width="2" stroke-linecap="round"></path> </g></svg>
+            <h3 class="link">Cow interpreter discord bot [09.2023]</h3>
             <img
               src="https://img.shields.io/badge/Python-14354C?style=for-the-badge&logo=python&logoColor=white"
             />
@@ -277,8 +270,7 @@
         </article>
         <article>
           <a href="https://ieba2.github.io/HydroSharks-website/">
-            <h3>> Site web HydroSharks Seatech [11.2023]</h3>
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#fffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M14 12C14 14.7614 11.7614 17 9 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H7.5M10 12C10 9.23858 12.2386 7 15 7H17C19.7614 7 22 9.23858 22 12C22 14.7614 19.7614 17 17 17H16.5" stroke="#ffffff" stroke-width="2" stroke-linecap="round"></path> </g></svg>
+            <h3 class="link">Site web HydroSharks Seatech [11.2023]</h3>
             <img
               src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"
             />
@@ -296,8 +288,7 @@
         </article>
         <article>
           <a href="https://github.com/omelette-bio/txt-editor">
-            <h3>> Éditeur de texte [11.2023]</h3>
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#fffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M14 12C14 14.7614 11.7614 17 9 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H7.5M10 12C10 9.23858 12.2386 7 15 7H17C19.7614 7 22 9.23858 22 12C22 14.7614 19.7614 17 17 17H16.5" stroke="#ffffff" stroke-width="2" stroke-linecap="round"></path> </g></svg>
+            <h3 class="link">Éditeur de texte [11.2023]</h3>
             <img
               src="https://img.shields.io/badge/Rust-000000?style=for-the-badge&logo=rust&logoColor=white"
             />
